Opened 12 years ago

Closed 12 years ago

#9469 closed bug (fixed)

[Time] can't enable Show clock in Deskbar with Auto-hide enabled

Reported by: diver Owned by: jscipione
Priority: normal Milestone: R1
Component: Applications/Deskbar Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev45313.

Open Deskbar preferences...-> Window -> enable Auto-hide Right click clock in Deskbar shelf->Time preferences

Show clock in Deskbar is not enabled and resets its' checkbox when I try to check it.

Change History (2)

comment:1 by jscipione, 12 years ago

I send a message from Time prefs to Deskbar to enable the Show clock in Deskbar checkbox. I'm guessing that Deskbar must not be accepting messages when hidden.

comment:2 by jscipione, 12 years ago

Component: Preferences/Time & DateApplications/Deskbar
Resolution: fixed
Status: newclosed

Fixed in hrev45317 but my above guess was wrong, Deskbar got the message fine. The problem was that views are considered hidden if their parent window is hidden and I didn't properly handle that case.

Note: See TracTickets for help on using tickets.